tests/compile_fail/endpoint_missing_security.stderr
error: acube endpoint requires a security declaration.
         Add #[acube_security(jwt)] or #[acube_security(none)] to explicitly opt out.
 --> $WORKSPACE/tests/compile_fail/endpoint_missing_security.rs
  |
  | async fn test_handler(_ctx: AcubeContext) -> AcubeResult<Json<serde_json::Value>, Never> {
  |          ^^^^^^^^^^^^
